=head1 Krang Changelog

This document contains a list of changes for each release of Krang.



=head2 3.01 - IN DEVELOPMENT

=over

=item *

Implemented requested "Replace Story" feature where instead of a simple duplicate-URL
error, creating a story that conflicts with existing URLs now yields a dialogue box 
giving users the option of overwriting the duplicate URLs. [Noam Weinstein]

=item *

Removed deprecated Story "Priority". [Noam Weinstein]

=back



=head2 3.00 - IN DEVELOPMENT

=over

=item *

Fixed small bugs in TimeChooser where hour/mins of 0 were taken to be null,
and midnight hour was misunderstood during conversion. [Noam Weinstein]

=item *

Made C<Krang::ElementClass::XinhaEditor> work again. [Bodo Schulze]

=item *

Fixed bug in Sites:  Sites can now rename their URL without
losing deployed templates.  [Jesse Erlbaum]

=item *

Added alerts notifying user if the story being edited was checked-in, stolen,
or deleted by another user while they were editing it. [Noam Weinstein]

=item *

Implemented requested "Steal Story" feature, allowing a user with force-checkin
permission to grab/edit stories checked out to others in one step. [Noam Weinstein]

=item *

Enhanced all duplicate-URL checking methods to prevent new stories
with slugs from conflicting with existing category URLs, and new
categories from conflicting with existing stories. [Noam Weinstein]

=item *

Implemented 'Replace Category' button in Edit Story CGI
to simplify process of moving stories. [Noam Weinstein]

=item *

Made slugs optional (but not required) for all story types,
added slug_use() method to TopLevel allowing class-based
defaults/requirements, and enhanced New Story and Edit
Story CGI to show slug fields as appropriate. [Noam Weinstein]

=item *

Added title/slug mapping for high CP1252 and latin-1 chars to
Krang.Slug.title_to_slug(). [Bodo Schulze]

=item *

Fixed bug in ListGroup.pm where re-editing from GUI lost all 