@@ -71,6 +71,8 @@ div.autocomplete { height: expression( ( this.scrollHeight > 154 ) ? '154px' : '
 
 <script type="text/javascript">
 Krang.instance = '<tmpl_var escape=js instance_display_name>';
+Krang.Window.build_id();
+Krang.Window.set_cookie();
 </script>
 
 </head><body>
@@ -131,7 +133,7 @@ if( Prototype.Browser.WebKit ) {
 
 <div class="nav"><ul>
 
-<li class="l"><a href="login.pl?rm=logout" class="logout">
+<li class="l"><a href="login.pl?rm=logout" onclick="Krang.Window.set_cookie()" class="logout">
 Log Out
 </a></li>
 
@@ -148,6 +150,10 @@ Help with this Page
 </a></li>
 
 </ul></li>
+
+<li><a href="login.pl?rm=new_window&caller=<tmpl_var header_user_id>" target='_blank' onclick="Krang.Window.set_cookie()">
+New Window 
+</a></li>
 
 <li><a href="javascript:Krang.Nav.goto_url('workspace.pl')">
 Workspace
